syntax = "proto3";

import "google/protobuf/wrappers.proto";
import "avenue/financial/protobuf/core/core_messages_description.proto";


option java_multiple_files = true;
option java_package = "com.avenue.financial.services.grpc.proto.invoice";
option java_outer_classname = "InvoiceMessagesDescriptionProto";

package avenue.financial.protobuf.invoice;

message InvoiceProto{
  google.protobuf.StringValue _id = 1;
  avenue.financial.protobuf.core.MetaProto meta = 2;
  avenue.financial.protobuf.core.MiniUserProto owner = 3;
  avenue.financial.protobuf.core.EntityStatusWrapper.EntityStatus status = 4;
  avenue.financial.protobuf.core.VisibilityTypeProto visibility = 5;
  InvoiceInfoProto invoice_info = 6;

}

message InvoiceInfoProto{
  google.protobuf.StringValue invoice_number = 1;
  google.protobuf.StringValue po_so_number = 2;
  google.protobuf.StringValue invoice_date = 3;
  google.protobuf.StringValue due_date = 4;
  google.protobuf.StringValue customer_id = 5;
  google.protobuf.StringValue payment_term_id = 6;
  google.protobuf.StringValue memos = 7;
  PaymentStatusProto payment_status = 8;
  google.protobuf.StringValue send_date_time = 9;
  google.protobuf.StringValue internal_notes = 10;
  google.protobuf.StringValue footer_notes = 11;
  google.protobuf.DoubleValue sub_total = 12;
  google.protobuf.DoubleValue tax_total = 13;
  google.protobuf.DoubleValue total = 14;
  google.protobuf.BoolValue is_draft = 15;
  avenue.financial.protobuf.core.AddressProto billing_address = 17;
}
message AddInvoiceProto{

  avenue.financial.protobuf.core.MiniUserProto owner = 1;
  avenue.financial.protobuf.core.EntityStatusWrapper.EntityStatus status = 2;
  avenue.financial.protobuf.core.VisibilityTypeProto visibility = 3;
  InvoiceInfoProto invoice_info = 4;
  repeated InvoiceItemProto items = 5;


}

message UpdateInvoiceProto{
  google.protobuf.StringValue _id = 1;
  avenue.financial.protobuf.core.MiniUserProto owner = 2;
  avenue.financial.protobuf.core.EntityStatusWrapper.EntityStatus status = 3;
  avenue.financial.protobuf.core.VisibilityTypeProto visibility = 4;
  InvoiceInfoProto invoice_info = 5;
}

message InvoiceItemProto{
  google.protobuf.StringValue invoice_id = 1;
  google.protobuf.StringValue product_id = 2;
  google.protobuf.Int32Value quantity = 3;
  google.protobuf.Int32Value uom = 4;
  google.protobuf.DoubleValue price = 5;
  google.protobuf.DoubleValue tax1_id = 6;
  google.protobuf.DoubleValue tax2_id = 7;

}
enum PaymentStatusProto{
  UNPAID = 0;
  PARTIAL_PAID = 1;
  PAID = 2;

}




